--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/shuramishfuh/Inventory/issues"
   },
-  "homepage": "https://github.com/shuramishfuh/Inventory#readme"
+  "homepage": "https://github.com/shuramishfuh/Inventory#readme",
+  "dependencies": {
+    "mongoose": "^8.14.1"
+  }
 }
