--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
+    "qrcode": "^1.5.4",
     "winston": "^3.17.0"
   }
 }
