--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,13 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "pdfkit": "^0.17.0"
   },
   "devDependencies": {
     "eslint": "^9.25.1",
