--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,41 @@
 {
-  "name": "backend",
+  "name": "inventory-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Backend for the IT Asset Management System",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.1",
+    "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.10.1",
-    "pdfkit": "^0.17.0"
+    "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.7",
+    "pdfkit": "^0.17.0",
+    "qrcode": "^1.5.3",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^9.25.1",
-    "nodemon": "^3.1.10"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1"
   }
 }
