--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,53 @@
-backend/node_modules/*
+# Dependencies
+node_modules
+**/node_modules
+*/node_modules/*
 /node_modules/*
 
+# Build outputs
+/dist
+/build
+*.local
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Temporary files
+/temp
+/temp/*
+*.mjs
+hash.mjs
+
+# IDE - VSCode
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+
+# IDE - IntelliJ
+.idea
+*.iml
+*.ipr
+*.iws
+
+# System Files
 .DS_Store
+Thumbs.db
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Testing
+/coverage
+.nyc_output
+
+# Production
+/build
+/dist
+dist-ssr
