--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.2.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
+    "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
